BS responsive images
I used img-fluid for all the images, so now they are responsive.

--- a/KubanyiBalint.html
+++ b/KubanyiBalint.html
@@ -45,10 +45,10 @@
             Még mielőtt véglegesen csatlakozott a Supernemhez már félig meddig a tagja volt, hiszen néha feltűnt
             koncerteken, mint csomó másik előadónal, de az eggyüttes oszlopos tagja csak 2011-ben lett. Általában őt is
             vidám hangulat jellemzi.</p>
-        <img class="Tagok d-none d-md-block col-md-6 col-lg-4" src="Images/kubanyi_balint.jpg" alt="Kubányi Bálint" title="Kubányi Bálint">
+        <img class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/kubanyi_balint.jpg" alt="Kubányi Bálint" title="Kubányi Bálint">
     </main>
     <footer class="w-100 row">
-        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12" id="vissza" alt="Vissza a főoldalra"></a>
+        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12 img-fluid" id="vissza" alt="Vissza a főoldalra"></a>
     </footer>
 </body>
 
