--- a/NagyDavid.html
+++ b/NagyDavid.html
@@ -45,10 +45,10 @@
             Supernemnek jellegzetes áttetsző sárgás dobkészletén. A Supernem előtt az Óriások dobosa
             és dalszövegírója volt. Általában vidám szokott lenni. Külsőleg egy körszakáll jellemzi és a kis "taraját"
             mindig más színűre festi.</p>
-        <img class="Tagok d-none d-md-block col-md-6 col-lg-4" src="Images/nagy-david.jpg" alt="Nagy Dávid" title="Nagy Dávid">
+        <img class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/nagy-david.jpg" alt="Nagy Dávid" title="Nagy Dávid">
     </main>
     <footer class="w-100 row">
-        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12" id="vissza" alt="Vissza a főoldalra"></a>
+        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12 img-fluid" id="vissza" alt="Vissza a főoldalra"></a>
     </footer>
 </body>
 
