--- a/PappSzabi.html
+++ b/PappSzabi.html
@@ -52,10 +52,10 @@
             énekli el. Általában vidám hangulat jellemzi. Mostanság talán annyira nem, de nem olyan régen egymás
             után
             láthattuk különböző kereskedelmi csatornákon zsűriként vagy műsorvezető szerepében.</p>
-        <img class="Tagok d-none d-md-block col-md-6 col-lg-4" src="Images/papp-szabi.jpg" alt="Papp Szabi" title="Papp Szabi">
+        <img class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/papp-szabi.jpg" alt="Papp Szabi" title="Papp Szabi">
     </main>
     <footer class="w-100 row">
-        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12 col-md-6" id="vissza" alt="Vissza a főoldalra"></a>
+        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12 col-md-6 img-fluid" id="vissza" alt="Vissza a főoldalra"></a>
         <a href="https://starity.hu/sztarok/papp-szabolcs/" class="Tagok col-12 col-md-6 mx-auto text-right">Forrás</a>
     </footer>
 </body>
