--- a/PuliusTibor.html
+++ b/PuliusTibor.html
@@ -48,10 +48,10 @@
             jobban foglalkozott jazzel, és végül egy évet töltött a Kőbányai Zenei Stúdióban, ami után már nem sokkal
             következett a Supernem. Általában vidám
             hangulat jellemzi őt is, külsőre meg göndör haj.</p>
-        <img src="Images/pulius-tibor.jpg" class="Tagok d-none d-md-block col-md-6 col-lg-4" alt="Pulius Tibor" title="Pulius Tibor">
+        <img src="Images/pulius-tibor.jpg" class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" alt="Pulius Tibor" title="Pulius Tibor">
         </main>
     <footer class="w-100 row">    
-        <a href="foOldal.html"><img id="vissza" class="Tagok col-12 col-md-6" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
+        <a href="foOldal.html"><img id="vissza" class="Tagok col-12 col-md-6 img-fluid" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
         <a class="Tagok col-12 col-md-6 mx-auto text-right" href="https://hajonaplo.ma/zene/pulius-tibor-a-magyar-punk-mesterlovesze.html">Forrás</a>
     </footer>
 </body>
