--- a/Weekend.html
+++ b/Weekend.html
@@ -50,10 +50,10 @@
             <li><a href="https://youtu.be/ybMcbv72ge8" target="_blank">Weekend</a></li>
             <li><a href="https://youtu.be/aspQd19EeuA" target="_blank">Szabad</a></li>
         </ol>
-        <img class="Tagok d-none d-md-block col-md-6 col-lg-4" src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
+        <img class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
     </main>
     <footer class="w-100 row">
-        <a href="foOldal.html"><img class="Tagok col-12" id="vissza" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
+        <a href="foOldal.html"><img class="Tagok col-12 img-fluid" id="vissza" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
     </footer>
 </body>
 </html>
