--- a/foOldal.html
+++ b/foOldal.html
@@ -67,7 +67,7 @@
                 nagyon
                 sok daluk megragadt a köztudatban Mára már 6 albumot is
                 kiadtak, amikről az akábbiakban lehet olvasni.</p>
-            <table class="col-12">
+            <table class="d-none d-md-block col-12">
                 <tr>
                     <th>Cím</th>
                     <th>Dátum</th>
@@ -132,11 +132,11 @@
                 is, valamint tartalmaz egy <a href="https://youtu.be/709rEWYxyJg" target="_blank"><i>Induljon a
                         banzáj</i></a> feldolgozást is.
             </p>
-            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Hangosabban.jpg" alt="Hangosabban!" title="Hangosabban!">
+            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Hangosabban.jpg" alt="Hangosabban!" title="Hangosabban!">
         </div>
         <div class="Album row">
             <h2 class="col-12" id="Tejfog">Tejfog</h2>
-            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Tejfog.jpg" alt="Tejfog" title="Tejfog">
+            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Tejfog.jpg" alt="Tejfog" title="Tejfog">
             <p class="col-12 col-md-6 col-lg-8">A <i>Tejfog</i> nevű album volt a második, ami 2005-ben készült el. Az album összesen 41
                 percre foglalja le az érdeklődőket, ami 11 dalból áll. Erről az albumról ismertebb szám lett a
                 <a href="https://youtu.be/3h-csjUt_d0" target="_blank"><i>Majomdal</i></a>, a <a
@@ -155,11 +155,11 @@
                 href="https://youtu.be/dRjCygYnoaM" target="_blank"><i>Generáció</i></a> és az <a
                 href="https://youtu.be/vAj--HaSJSM" target="_blank"><i>Enyém-tied</i></a> is.
             </p>
-            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Nemde.jpg" alt="Nemde" title="Nemde">
+            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Nemde.jpg" alt="Nemde" title="Nemde">
         </div>
         <div class="Album row">
             <h2 class="col-12" id="Tudomanyos">Tudományos Fantasztikus Pop</h2>
-            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Tudomanyos.jpg" alt="Tudományos Fantasztikus Pop" title="Tudományos Fantasztikus Pop">
+            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Tudomanyos.jpg" alt="Tudományos Fantasztikus Pop" title="Tudományos Fantasztikus Pop">
             <p class="col-12 col-md-6 col-lg-8">A <i>Tudományos Fantasztikus Pop</i> a negyedik lemezük volt, ami 2011-ben látott napvilágot. Az album
                 összesen 27
                 percnyi szórakozást nyújt, ami 9 dalból áll. Megjelenésekor az album a MAHASZ <i>Top 40 album</i>
@@ -184,11 +184,11 @@
                     millióból</i></a> és a <a href="https://youtu.be/hct-O-x3bEQ"
                     target="_blank"><i>Szívbemarkoló</i></a> is.
             </p>
-            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Frekvencia.jpg" alt="Túl a frekvencián" title="Túl a frekvencián">
+            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Frekvencia.jpg" alt="Túl a frekvencián" title="Túl a frekvencián">
         </div>
         <div class="Album row">
             <h2 class="col-12" id="Weekend">Weekend</h2>
-            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
+            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
             <p class="col-12 col-md-6 col-lg-8">A <i>Weekend</i> névű albumjuk a hatodik volt, ami 2018-ban jelent meg, és jelenleg ez a legújabb. Az
                 album
                 összesen 24
