BS utilities and finishing touches
I implemented enough BS utilities, and I corrected the last visible problems.

--- a/NagyDavid.html
+++ b/NagyDavid.html
@@ -12,7 +12,7 @@
 
 <body class="Tagok">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -38,7 +38,7 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main class="Tagok row" id="Content">
+    <main class="Tagok container row" id="Content">
         <h1 class="Tagok col-12">Nagy Dávid</h1>
         <p class="Tagok col-12 col-md-6 col-lg-8">Nagy Dávid a Supernem zenekar dobosa, aki 2016-ban váltotta fel Mózsik Imrét, azóta is adja az
             ütemet a
@@ -47,7 +47,7 @@
             mindig más színűre festi.</p>
         <img class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/nagy-david.jpg" alt="Nagy Dávid" title="Nagy Dávid">
     </main>
-    <footer class="w-100 row">
+    <footer class="container-fluid ml-0 row bg-dark">
         <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12 img-fluid" id="vissza" alt="Vissza a főoldalra"></a>
     </footer>
 </body>
