--- a/PappSzabi.html
+++ b/PappSzabi.html
@@ -13,15 +13,15 @@
 
 <body class="Tagok">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav mx-auto">
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav mx-auto">
                         <a class="nav-link" href="PappSzabi.html">Papp Szabi</a>
                         <a class="nav-link" href="PuliusTibor.html">Pulius Tibor</a>
                         <a class="nav-link" href="Weekend.html">Weekend</a>
@@ -39,7 +39,7 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main class="Tagok row" id="Content">
+    <main class="Tagok container row" id="Content">
         <h1 class="Tagok col-12">Papp Szabolcs</h1>
         <p class="Tagok col-12 col-md-6 col-lg-8">Papp Szabolcs a Supernem zenekar énekese és basszusgitárosa. 1976.02.19-én született Békéscsabán.
             Gyermekkora
@@ -52,11 +52,11 @@
             énekli el. Általában vidám hangulat jellemzi. Mostanság talán annyira nem, de nem olyan régen egymás
             után
             láthattuk különböző kereskedelmi csatornákon zsűriként vagy műsorvezető szerepében.</p>
-        <img class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/papp-szabi.jpg" alt="Papp Szabi" title="Papp Szabi">
+        <img id="PappSzabi" class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/papp-szabi.jpg" alt="Papp Szabi" title="Papp Szabi">
     </main>
-    <footer class="w-100 row">
-        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12 col-md-6 img-fluid" id="vissza" alt="Vissza a főoldalra"></a>
-        <a href="https://starity.hu/sztarok/papp-szabolcs/" class="Tagok col-12 col-md-6 mx-auto text-right">Forrás</a>
+    <footer class="h-auto bg-dark container-fluid Tagok">
+        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok my-auto col-12 col-md-6 img-fluid" id="vissza" alt="Vissza a főoldalra"></a>
+        <a href="https://starity.hu/sztarok/papp-szabolcs/" class="Tagok text-light col-12 col-md-6 my-auto mx-auto text-right">Forrás</a>
     </footer>
 </body>
 
