--- a/PuliusTibor.html
+++ b/PuliusTibor.html
@@ -12,7 +12,7 @@
 
 <body class="Tagok">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -38,7 +38,7 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main class="Tagok row" id="Content">
+    <main class="Tagok container row" id="Content">
         <h1 class="Tagok col-12">Pulius Tibor</h1>
         <p class="Tagok col-12 col-md-6 col-lg-8">Pulius Tibor a Supernem zenekar vokalistája és gitárosa. 1977.05.06-án született Kecskeméten. Zenész családba
             született, apja is híres gitáros, ezért egyértelmű lett volna, hogy zenével kezd el foglalkozni, de eredetileg
@@ -50,9 +50,9 @@
             hangulat jellemzi őt is, külsőre meg göndör haj.</p>
         <img src="Images/pulius-tibor.jpg" class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" alt="Pulius Tibor" title="Pulius Tibor">
         </main>
-    <footer class="w-100 row">    
+    <footer class="container-fluid ml-0 row bg-dark">    
         <a href="foOldal.html"><img id="vissza" class="Tagok col-12 col-md-6 img-fluid" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
-        <a class="Tagok col-12 col-md-6 mx-auto text-right" href="https://hajonaplo.ma/zene/pulius-tibor-a-magyar-punk-mesterlovesze.html">Forrás</a>
+        <a class="Tagok col-12 col-md-6 mx-auto text-right text-light" href="https://hajonaplo.ma/zene/pulius-tibor-a-magyar-punk-mesterlovesze.html">Forrás</a>
     </footer>
 </body>
 
