--- a/Weekend.html
+++ b/Weekend.html
@@ -10,7 +10,7 @@
 </head>
 <body class="Tagok">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -36,23 +36,23 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main class="Tagok row" id="Content">
+    <main class="Tagok container row" id="Content">
         <h1 class="Tagok col-12">Weekend</h1>
         <ol class="Tagok col-12 col-md-6 col-lg-8">
-            <li><a href="https://youtu.be/mvN1FGSIa20" target="_blank">Presszó</a></li>
-            <li><a href="https://youtu.be/rqye_F2ABvg" target="_blank">Nemzeti dal</a></li>
-            <li><a href="https://youtu.be/8dKBaT0BWOE" target="_blank">Jelezz vissza</a></li>
-            <li><a href="https://youtu.be/1oHtmhAL4V4" target="_blank">Taxi</a></li>
-            <li><a href="https://youtu.be/SMzNWcUkXyU" target="_blank">Március</a></li>
-            <li><a href="https://youtu.be/eLChA8S0F2I" target="_blank">Tűzijáték</a></li>
-            <li><a href="https://youtu.be/-BFI1AduqVw" target="_blank">Egy nap egy év</a></li>
-            <li><a href="https://youtu.be/6tjD-dcH1f4" target="_blank">A Péterfy Bori mészárlás</a></li>
-            <li><a href="https://youtu.be/ybMcbv72ge8" target="_blank">Weekend</a></li>
-            <li><a href="https://youtu.be/aspQd19EeuA" target="_blank">Szabad</a></li>
+            <li><a class="Tagok" href="https://youtu.be/mvN1FGSIa20" target="_blank">Presszó</a></li>
+            <li><a class="Tagok" href="https://youtu.be/rqye_F2ABvg" target="_blank">Nemzeti dal</a></li>
+            <li><a class="Tagok" href="https://youtu.be/8dKBaT0BWOE" target="_blank">Jelezz vissza</a></li>
+            <li><a class="Tagok" href="https://youtu.be/1oHtmhAL4V4" target="_blank">Taxi</a></li>
+            <li><a class="Tagok" href="https://youtu.be/SMzNWcUkXyU" target="_blank">Március</a></li>
+            <li><a class="Tagok" href="https://youtu.be/eLChA8S0F2I" target="_blank">Tűzijáték</a></li>
+            <li><a class="Tagok" href="https://youtu.be/-BFI1AduqVw" target="_blank">Egy nap egy év</a></li>
+            <li><a class="Tagok" href="https://youtu.be/6tjD-dcH1f4" target="_blank">A Péterfy Bori mészárlás</a></li>
+            <li><a class="Tagok" href="https://youtu.be/ybMcbv72ge8" target="_blank">Weekend</a></li>
+            <li><a class="Tagok" href="https://youtu.be/aspQd19EeuA" target="_blank">Szabad</a></li>
         </ol>
         <img class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
     </main>
-    <footer class="w-100 row">
+    <footer class="container-fluid ml-0 row bg-dark">
         <a href="foOldal.html"><img class="Tagok col-12 img-fluid" id="vissza" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
     </footer>
 </body>
