--- a/foOldal.html
+++ b/foOldal.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -39,7 +39,7 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main id="Content">
+    <main class="container" id="Content">
         <div class="row">
             <h1 class="col-12">Supernem</h1>
             <p class="col-12">A Supernem egy 2002-ben alakult magyar punk rock együttes, akik mostanság már rendszeres
@@ -67,7 +67,7 @@
                 nagyon
                 sok daluk megragadt a köztudatban Mára már 6 albumot is
                 kiadtak, amikről az akábbiakban lehet olvasni.</p>
-            <table class="d-none d-md-block col-12">
+            <table class="d-none d-md-block mx-auto">
                 <tr>
                     <th>Cím</th>
                     <th>Dátum</th>
@@ -132,7 +132,7 @@
                 is, valamint tartalmaz egy <a href="https://youtu.be/709rEWYxyJg" target="_blank"><i>Induljon a
                         banzáj</i></a> feldolgozást is.
             </p>
-            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Hangosabban.jpg" alt="Hangosabban!" title="Hangosabban!">
+            <img class="d-none d-md-block col-md-6 col-lg-4 Boritok img-fluid" src="Images/Hangosabban.jpg" alt="Hangosabban!" title="Hangosabban!">
         </div>
         <div class="Album row">
             <h2 class="col-12" id="Tejfog">Tejfog</h2>
@@ -204,9 +204,9 @@
             </p>
         </div>
     </main>
-    <footer class="w-100">
+    <footer class="bg-dark w-100">
         <a href="https://hu.wikipedia.org/wiki/Supernem">
-            <p>Forrás</p>
+            <p class="text-light">Forrás</p>
         </a>
     </footer>
 </body>
