--- a/KubanyiBalint.html
+++ b/KubanyiBalint.html
@@ -12,7 +12,7 @@
 
 <body class="Tagok">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -38,7 +38,7 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main class="Tagok row" id="Content">
+    <main class="Tagok container row" id="Content">
         <h1 class="Tagok col-12">Kubányi Bálint</h1>
         <p class="Tagok col-12 col-md-6 col-lg-8">Kubányi Bálint a Supernem zenekar billentyűse. Az eggyüttesből ő egyedül az, aki nem olyan elkötelezetten rock
             rajongó. Szintetizátoron játszik és dalszöveget ír. A Supernem előtt már sokmindent csinált a zenei világban.
@@ -47,8 +47,8 @@
             vidám hangulat jellemzi.</p>
         <img class="Tagok d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/kubanyi_balint.jpg" alt="Kubányi Bálint" title="Kubányi Bálint">
     </main>
-    <footer class="w-100 row">
-        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12 img-fluid" id="vissza" alt="Vissza a főoldalra"></a>
+    <footer class="ml-0 container-fluid row bg-dark">
+        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok my-auto col-12 img-fluid" id="vissza" alt="Vissza a főoldalra"></a>
     </footer>
 </body>
 
