--- a/foOldal.html
+++ b/foOldal.html
@@ -15,9 +15,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -67,6 +66,7 @@
                 nagyon
                 sok daluk megragadt a köztudatban Mára már 6 albumot is
                 kiadtak, amikről az akábbiakban lehet olvasni.</p>
+            <!-- Megcsináltam Bootstrap-esre a táblázatot, de szerintem ez a verzió jobban illik az oldalhoz. -->
             <table class="d-none d-md-block mx-auto">
                 <tr>
                     <th>Cím</th>
@@ -121,7 +121,8 @@
         </div>
         <div class="Album row">
             <h2 id="Hangosabban" class="col-12">Hangosabban!</h2>
-            <p class="col-12 col-md-6 col-lg-8">A <i>Hangosabban!</i> névre hallgató albumjuk az elős albumjuk volt, ami 2003-ban jelent meg. Ez a lemez
+            <p class="col-12 col-md-6 col-lg-8">A <i>Hangosabban!</i> névre hallgató albumjuk az elős albumjuk volt, ami
+                2003-ban jelent meg. Ez a lemez
                 adta
                 meg a
                 kezdeti sikert nekik, hiszen váratlanul jól fogadta a közönség és felkapta őket. Az album összesen 46
@@ -132,12 +133,15 @@
                 is, valamint tartalmaz egy <a href="https://youtu.be/709rEWYxyJg" target="_blank"><i>Induljon a
                         banzáj</i></a> feldolgozást is.
             </p>
-            <img class="d-none d-md-block col-md-6 col-lg-4 Boritok img-fluid" src="Images/Hangosabban.jpg" alt="Hangosabban!" title="Hangosabban!">
+            <img class="d-none d-md-block col-md-6 col-lg-4 Boritok img-fluid" src="Images/Hangosabban.jpg"
+                alt="Hangosabban!" title="Hangosabban!">
         </div>
         <div class="Album row">
             <h2 class="col-12" id="Tejfog">Tejfog</h2>
-            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Tejfog.jpg" alt="Tejfog" title="Tejfog">
-            <p class="col-12 col-md-6 col-lg-8">A <i>Tejfog</i> nevű album volt a második, ami 2005-ben készült el. Az album összesen 41
+            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Tejfog.jpg" alt="Tejfog"
+                title="Tejfog">
+            <p class="col-12 col-md-6 col-lg-8">A <i>Tejfog</i> nevű album volt a második, ami 2005-ben készült el. Az
+                album összesen 41
                 percre foglalja le az érdeklődőket, ami 11 dalból áll. Erről az albumról ismertebb szám lett a
                 <a href="https://youtu.be/3h-csjUt_d0" target="_blank"><i>Majomdal</i></a>, a <a
                     href="https://youtu.be/tjdXedpgm6g" target="_blank"><i>Számolj
@@ -149,18 +153,21 @@
         </div>
         <div class="Album row">
             <h2 class="col-12" id="Nemde">Nemde</h2>
-            <p class="col-12 col-md-6 col-lg-8">A <i>Nemde</i> névvel ellátott albumjuk a harmadik volt, ami 2007-ben lett publikus. Az album összesen 36
+            <p class="col-12 col-md-6 col-lg-8">A <i>Nemde</i> névvel ellátott albumjuk a harmadik volt, ami 2007-ben
+                lett publikus. Az album összesen 36
                 percnyi szórakozást nyújt, ami 10 dalt tartalmaz. Erről az albumról ismerős szám lehet a
                 <a href="https://youtu.be/Pxuh0paj0zI" target="_blank"><i>Zsebre dugott kézzel</i></a>, a <a
-                href="https://youtu.be/dRjCygYnoaM" target="_blank"><i>Generáció</i></a> és az <a
-                href="https://youtu.be/vAj--HaSJSM" target="_blank"><i>Enyém-tied</i></a> is.
+                    href="https://youtu.be/dRjCygYnoaM" target="_blank"><i>Generáció</i></a> és az <a
+                    href="https://youtu.be/vAj--HaSJSM" target="_blank"><i>Enyém-tied</i></a> is.
             </p>
             <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Nemde.jpg" alt="Nemde" title="Nemde">
         </div>
         <div class="Album row">
             <h2 class="col-12" id="Tudomanyos">Tudományos Fantasztikus Pop</h2>
-            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Tudomanyos.jpg" alt="Tudományos Fantasztikus Pop" title="Tudományos Fantasztikus Pop">
-            <p class="col-12 col-md-6 col-lg-8">A <i>Tudományos Fantasztikus Pop</i> a negyedik lemezük volt, ami 2011-ben látott napvilágot. Az album
+            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Tudomanyos.jpg"
+                alt="Tudományos Fantasztikus Pop" title="Tudományos Fantasztikus Pop">
+            <p class="col-12 col-md-6 col-lg-8">A <i>Tudományos Fantasztikus Pop</i> a negyedik lemezük volt, ami
+                2011-ben látott napvilágot. Az album
                 összesen 27
                 percnyi szórakozást nyújt, ami 9 dalból áll. Megjelenésekor az album a MAHASZ <i>Top 40 album</i>
                 listáján a
@@ -175,21 +182,25 @@
         </div>
         <div class="Album row">
             <h2 class="col-12" id="Frekvencia">Túl a frekvencián</h2>
-            <p class="col-12 col-md-6 col-lg-8">A <i>Túl a frekvencián</i> névre keresztelt albumjuk az ötödik volt, ami 2014-ben jelent meg. A lemez
+            <p class="col-12 col-md-6 col-lg-8">A <i>Túl a frekvencián</i> névre keresztelt albumjuk az ötödik volt, ami
+                2014-ben jelent meg. A lemez
                 kijövetelekor felkerült a MAHASZ <i>Top 40 album</i> listájára, méghozzá előkelő 4. helyen. Az album
                 összesen 28
                 percnyi szórakozást nyújt, ami 8 dalból áll. Erről az albumról ismerős dal lehet a
                 <a href="https://youtu.be/aK-V7vOq1tU" target="_blank"><i>Túl a frekvencián</i></a>, a <a
-                href="https://youtu.be/u03JwBrDLMA" target="_blank"><i>Egy a
-                    millióból</i></a> és a <a href="https://youtu.be/hct-O-x3bEQ"
+                    href="https://youtu.be/u03JwBrDLMA" target="_blank"><i>Egy a
+                        millióból</i></a> és a <a href="https://youtu.be/hct-O-x3bEQ"
                     target="_blank"><i>Szívbemarkoló</i></a> is.
             </p>
-            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Frekvencia.jpg" alt="Túl a frekvencián" title="Túl a frekvencián">
+            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Frekvencia.jpg"
+                alt="Túl a frekvencián" title="Túl a frekvencián">
         </div>
         <div class="Album row">
             <h2 class="col-12" id="Weekend">Weekend</h2>
-            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
-            <p class="col-12 col-md-6 col-lg-8">A <i>Weekend</i> névű albumjuk a hatodik volt, ami 2018-ban jelent meg, és jelenleg ez a legújabb. Az
+            <img class="d-none d-md-block col-md-6 col-lg-4 img-fluid" src="Images/Weekend.jpg" alt="Weekend"
+                title="Weekend">
+            <p class="col-12 col-md-6 col-lg-8">A <i>Weekend</i> névű albumjuk a hatodik volt, ami 2018-ban jelent meg,
+                és jelenleg ez a legújabb. Az
                 album
                 összesen 24
                 percnyi szórakozást nyújt, ezzel ez eddig legrövidebb albumjuk, ami 10 dalból áll(ebből 2 intró). Amikor
@@ -209,6 +220,15 @@
             <p class="text-light">Forrás</p>
         </a>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
